<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pintabestbeers.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/beerLabel"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/etykieta_piwa"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/beerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nazwa_piwa"
                android:textColor="#01b57f"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/beerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_style" />

            <TextView
                android:id="@+id/beerPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_plato" />

            <TextView
                android:id="@+id/beerAlcohol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_alcohol" />

            <TextView
                android:id="@+id/beerIBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_ibu" />

            <TextView
                android:id="@+id/beerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_description" />

            <TextView
                android:id="@+id/beerAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_author" />

            <TextView
                android:id="@+id/beerIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_ingredients" />

            <TextView
                android:id="@+id/beerBrowamator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_browamator" />

            <TextView
                android:id="@+id/beerOtherInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_other_info" />

            <TextView
                android:id="@+id/beerAvailability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_availability" />

            <TextView
                android:id="@+id/beerCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/beer_capacity" />

            <TextView
                android:id="@+id/beerGlass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_glass" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
